JumpScript/tests/baselines/reference/ES5For-ofTypeCheck11.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck11.jump(3,6): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck11.jump (1 errors) ====
    var union: string | number[];
    var v: string;
    for (v of union) { }
         ~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.